# Terminalik

./: .gitignore  LICENSE  README.md  authFlow.py  main.py  pyproject.toml  terminalik.css
components/: projectSetupForm.py
pages/: projectSetup.py  readmeMarkdown.py
utils/setups/: setupDjango.py  setupDocker.py  setupVue.py
